--- a/project2.html
+++ b/project2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Coming soon...</title>
+		<title>Laser-cut project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- ICON - Chrome -->
@@ -41,8 +41,125 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major"></h1>
-							<span class="image"><img src="images/proj2coming.png" alt="" /></span>
+							<h1 class="major">Laser-cut project</h1>
+							<p>The second individual project of the semester is to make a design in Fusion360, or similar, on a dxf form and cut with a laser cutter. One demand of the project is that the design is pressfit and has finger joints. </p>
+                            <hr/>
+                            <h2>Finding inspiration</h2>
+                            <p>I wanted the project I made to be useful. A simple, smaller item would maybe be the quickest or easiest way to execute this project. I decided that I did not want to make „waste“ by making something non-useful and also thought the process of it would be more rewarding if the item would be useful.</p>
+                            <p>I did a lot of brainstorming and came to the conclusion to make a stepping stool for my dog, which is a very small Yorkshire Terrier that can not jump up on to the sofa or bed.  I looked for inspiration on Etsy and Amazon, where you can buy a similar thing as what I had imagined. Unfortunately I did not find similar laser cut projects until I found a dog house that had a ladder leading up to it‘s roof. After I had spent way too much time looking for some similar projects I decided to just start designing with a similar item that is not pressfit or laser cut. </p>
+                            <p>Search words used for information gathering: <i>html setup, pet-steps, laser cut dog house, stairs for small dog</i>.</p>
+                            <hr/>
+                            <h2>Designing the steps</h2>
+                            <p>Below there is a photo of steps that I used for reference in measurements. The measurements are in inches so I translated them to understand roughly the height, length and width needed for the steps to recach the seat of an average couch or bed (from 30-14 cm), for the whole item to be steady and for each step to be long enough so that a dog with short legs can use the steps without any problem. I also wanted it to have a sort of railing on the sides to guide the dog straight up the stairs, so that the steps vill not be sliding to the sides as it jumps on or off the steps. </p>
+                            <img src="images/steps_inspo.png" alt="" width="400" height="310">
+                            <p>The table below contains refenece measurements, translation from inches to cm, porportions of the parts and finally the measurents that are used for the project parameters. </p>
+                            <h3>Table 1: Parameter planning</h3>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Part</th>
+													<th>Inches</th>
+													<th>Centimeters</th>
+                                                    <th>Porportions (7 inches = 1 part)</th>
+                                                    <th>Measurements used [mm]</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Height</td>
+													<td>14</td>
+													<td>35,56</td>
+                                                    <td>2</td>
+                                                    <td>350</td>
+												</tr>
+												<tr>
+													<td>Height above step 1</td>
+													<td>7</td>
+													<td>17,78</td>
+                                                    <td>1</td>
+                                                    <td>Step height+75</td>
+												</tr>
+												<tr>
+													<td>Length</td>
+													<td>21</td>
+													<td>53,34</td>
+                                                    <td>3</td>
+                                                    <td>450</td>
+												</tr>
+												<tr>
+													<td>Width</td>
+													<td>17</td>
+													<td>43,18</td>
+                                                    <td>1,5-2</td>
+                                                    <td>300</td>
+												</tr>
+												<tr>
+													<td>Step height 1</td>
+													<td>6</td>
+													<td>15,24</td>
+                                                    <td>1</td>
+                                                    <td>150</td>
+												</tr>
+                                                <tr>
+													<td>Step height 2</td>
+													<td>12</td>
+													<td>30,48</td>
+                                                    <td>2</td>
+                                                    <td>2 * Step height 1</td>
+												</tr>
+                                                <tr>
+													<td>Step length 1</td>
+													<td>10,5</td>
+													<td>26,67</td>
+                                                    <td>1,5</td>
+                                                    <td>210</td>
+												</tr>
+                                                <tr>
+													<td>Step length 2</td>
+													<td>10,5</td>
+													<td>26,67</td>
+                                                    <td>1,5</td>
+                                                    <td>Step length 1 + Thickness</td>
+												</tr>
+                                                <tr>
+													<td>Thickness</td>
+													<td>-</td>
+													<td>-</td>
+                                                    <td>-</td>
+                                                    <td>40</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+                            <h2>Planning the execution</h2>
+                            <p>The first step of the execution of the project was adding parameters. A video suggested by the course teacher that can be seen below was used as a guide. </p>
+                            <ul class="actions fit small">
+                                <li><a href="https://www.youtube.com/watch?v=9U2JPfkQpsE" class="button primary fit" target="_blank">Finger joints: Fusion 360</a></li></ul>
+                            <p>The parameters are rather many in this project, as will be mentioned later on in these instructions the front of the second step needed it‘s own parameter and a few different finger sizes had to be made. Below is a photo with a listing of all parameters and current values.</p>
+                            <span class="image"><img src="images/parameters.png" alt="" /></span>
+                            <p>Before starting to draw the design the approximate look of the steps was planned, specifically the side railings and how the back and bottom should fit the steps. A desicion was made to make the bottom panel slightly visible in the front, just like in the photo above. The railings were meant to be smooth and follow the flow of the steps, unlike the one shown in the reference photo above</p>
+                            <h2>Drawing</h2>
+                            <p>The first few steps in the drawing the design were drawing a simple box with two side panels, a back panel and a bottom panel. The same video as above was used to make this part of the design and get to know Fusion360 a bit better.</p>
+                            <img src="images/fusion_steps1.png" alt="" width="510" height="300">
+                            <p>Next the front of the first step was added to the drawing. The sketch was made on the Y-Z axiz and extruded to be stationed 30 mm from the front edge of the bottom panel. </p>
+                            <img src="images/fusion_step2.png" alt="" width="510" height="350">
+                            <p>Following the front was the top of the first step. </p>
+                            <img src="images/fusion_steps3.png" alt="" width="510" height="350">
+                            <p>After that the same two components were added for the second step. This is where the first problems came up, as accounting the thickness of the material for the length of the step had not been done, so it did not reach through the pack panel. This was fixed. After that, when the step had been added the thought came up that maybe the item was not sturdy enough to be stepped on by a dog (knowledge of the strength of the material was lacking). This resulted in making the front panel of the second step not only reach the top of the forst step but all the way down to the bottom panel, just in case! </p>
+                            <img src="images/fusion_steps4.png" alt="" width="510" height="350">
+                            <p>As seen in the photos fingers were added to the panels with each addition, just like in the video mentioned above, apart from the right side. This is because the right side will be a replica of the left one, made after all the finger gaps are made. Then the side panel will be used to cut the fingers on all panels that will be fitted with that side.  </p>
+                            <p>The next step was making a cut-out on the side panel to resemble a railing. A sketch was added by drawing a rectangle in the corner of the panel and making a slight fillet (20mm rad) in the inner corner of it as seen in the photo below. The cut-out is set to be half of the step‘s height away form the top of the first step as well as the front af the second step.</p>
+                            <img src="images/fusion_steps5.png" alt="" width="510" height="350">
+                            <img src="images/fusion_steps6.png" alt="" width="510" height="350">
+                            <p>After that a fillet with a 50 mm radius was added to both of the sharp corners to make the railing more sleek. </p>
+                            <img src="images/fusion_steps7.png" alt="" width="510" height="350">
+                            <p>Finally the right side panel was made with an extrusion of the left one.</p>
+                            <img src="images/fusion_steps8.png" alt="" width="500" height="350">
+                            <h2>Preparing for CAM</h2>
+                            A very helpful reference video was used for this part, and can be found below. 
+                            <ul class="actions fit small">
+                                <li><a href="https://www.youtube.com/watch?v=ZYj37I88-4g" class="button primary fit" target="_blank">Preparing for CAM: Fusion 360</a></li></ul>
 						</div>
 					</section>
 
