--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Project 2</h2>
-									<p>Description of the second project of the semester.</p>
+									<p>Laser-cut project</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button disabled">Coming soon</a></li>
+										<li><a href="project2.html" class="button">Coming soon</a></li>
 									</ul>
 								</div>
 							</div>
