--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<h2>Project 2</h2>
 									<p>Laser-cut project</p>
 									<ul class="actions">
-										<li><a href="project2.html" class="button">Coming soon</a></li>
+										<li><a href="project2.html" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
