--- a/project2.html
+++ b/project2.html
@@ -158,6 +158,7 @@
                             <img src="images/fusion_steps7.png" alt="" width="470" height="350">
                             <p>Finally the right side panel was made with an extrusion of the left one.</p>
                             <img src="images/fusion_steps8.png" alt="" width="470" height="350">
+                            <hr/>
                             <h2>Preparing for CAM</h2>
                             <p>A very helpful reference video was used for this part, and can be found below. 
                             <br></p>
@@ -165,14 +166,14 @@
                                 <li><a href="https://www.youtube.com/watch?v=ZYj37I88-4g" class="button primary fit" target="_blank">Preparing for CAM: Fusion 360</a></li></ul>
                             <p>After laying all the bodies flat the design looked like this:</p>
                             <img src="images/flat_steps.png" alt="" width="500" height="350">
-                            <p>The next step, which the teacher explained in a simple way, was to make a sketch of the outlines of all the bodies. After the sketch is made every outline is chosen and offset by kerf/2. How the sketch looks after the offset has been added can be seen below, and looks rather messy. </p>
+                            <p>The next step, which the teacher explained in a simple way, was to make a sketch of the outlines of all the bodies. After the sketch is made every outline is chosen and offset by kerf/2. How the sketch looks after the offset has been added can be seen below, which admittedly is rather messy. </p>
                             <img src="images/offset_steps.png" alt="" width="500" height="350">
-                            <p>Now the sketch can be right clicked, in the Browser on the left side of the Fusion360 window, and should be able to be Exported. The following window pops up. </p>
+                            <p>Now the sketch can be right clicked, in the Browser on the left side of the Fusion360 window, and should be able to be exported. The following window pops up. </p>
                             <img src="images/export_steps.png" alt="" width="550" height="350">
                             <p>There the Type: DXF Files (*.dxf) is chosen. Now the file is ready to be opened in InkScape for printing (or cutting in fact). There the bodies are placed on a suitably sized sheet, according to the size of the wood panel. This is where a new problem came up, as the plan was to cut the steps out of one 1000x700mm panel and one 600x400mm panel. Unfortunately almost all panels had been used up so improvising was the only way to finish the project. The bodies were split up and placed on four panels in total; one half-used 1000x700mm panel that can be seen below, one 600x400mm panel that another student had carved into instead of cutting and two 500x400mm panels. </p> 
                             <hr/>
                             <h2>Preparing the laser for cutting</h2>
-                            <p>The file is transferred to the laser-cutters computed via USB. Before starting the cutting process the laser has to be adjusted along the x-, y- and z- axis as well as set to cut, not carve. Below is a photo of the manual focus tool, used to adjust the z-axis and following are the speed, power and frequency settings used to cut plywood.</p>
+                            <p>The file is transferred to the laser-cutter's assigned computer via USB. Before starting the cutting process the laser has to be adjusted along the x-, y- and z- axis as well as set to cut, not carve. Below is a photo of the manual focus tool, used to adjust the z-axis and following are the speed, power and frequency settings used to cut plywood.</p>
                             <div class="box alt">
 								<div class="row gtr-uniform">
                                     <div class="col-4"><span class="image fit"><img src="images/manual_focus_tool.jpg" alt="" /></span></div>
