--- a/project2.html
+++ b/project2.html
@@ -43,6 +43,51 @@
 						<div class="inner">
 							<h1 class="major">Laser-cut project</h1>
 							<p>The second individual project of the semester is to make a design in Fusion360, or similar, on a DXF format and cut with a laser cutter. One demand of the project is that the design is pressfit and has finger joints. A small group project, finding the kerf for the laser-cutter used for the individual project, is included in the design chapter.</p>
+                            <h4>Table 1: Workload</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Project part</th>
+													<th>Working time [hours</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Finding inspiration and watching tutorials</td>
+													<td>6</td>
+												</tr>
+												<tr>
+													<td>Planning and drawing</td>
+													<td>8</td>
+												</tr>
+												<tr>
+													<td>Execution of group project: Finding the kerf</td>
+													<td>2</td>
+												</tr>
+												<tr>
+													<td>Preparing for CAM</td>
+													<td>1</td>
+												</tr>
+												<tr>
+													<td>Preparing laser and cutting</td>
+													<td>1</td>
+												</tr>
+                                                <tr>
+													<td>Assembly and unwarping</td>
+													<td>5</td>
+												</tr>
+                                                <tr>
+													<td>Documentation</td>
+													<td>5</td>
+												</tr>
+                                                <tr>
+                                                    <td><b>Total workload</b></td>
+													<td><b>28 hours</b></td>
+                                                </tr>
+                                             </tbody>
+								        </table>
+									</div>
                             <hr/>
                             <h2>Finding inspiration</h2>
                             <p>I wanted the project I made to be useful. A simple, smaller item would maybe be the quickest or easiest way to execute this project. I decided that I did not want to make „waste“ by making something non-useful and also thought the process of it would be more rewarding if the item would be useful.</p>
@@ -53,7 +98,7 @@
                             <p>Below there is a photo of steps that I used for reference in measurements. The measurements are in inches so I translated them to understand roughly the height, length and width needed for the steps to recach the seat of an average couch or bed (from 30-14 cm), for the whole item to be steady and for each step to be long enough so that a dog with short legs can use the steps without any problem. I also wanted it to have a sort of railing on the sides to guide the dog straight up the stairs, so that the steps vill not be sliding to the sides as it jumps on or off the steps. </p>
                             <img src="images/steps_inspo.png" alt="" width="400" height="310">
                             <p>The table below contains refenece measurements, translation from inches to cm, porportions of the parts and finally the measurents that are used for the project parameters. </p>
-                            <h4>Table 1: Parameter planning</h4>
+                            <h4>Table 2: Parameter planning</h4>
 									<div class="table-wrapper">
 										<table class="alt">
 											<thead>
