--- a/project3.html
+++ b/project3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Coming soon...</title>
+		<title>3D printing project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- ICON - Chrome -->
@@ -39,14 +39,127 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+										<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major"></h1>
-							<span class="image"><img src="images/proj3coming.png" alt="" /></span>
+							<h1 class="major">Laser-cut project</h1>
+							<p>The third individual project of the semester is to design and print an object in 3D that can not be made by cutting. Additionally, scanning any object in 3D is a part of the project. A small group project, finding the restrictions of the 3D printer used for the individual project is included in the design chapter. </p>
+                            <h4>Table 1: Workload</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Project part</th>
+													<th>Working time [hours</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Finding inspiration and watching tutorials</td>
+													<td>2</td>
+												</tr>
+												<tr>
+													<td>Planning and drawing</td>
+													<td>8</td>
+												</tr>
+												<tr>
+													<td>Execution of group project: Finding the kerf</td>
+													<td>2</td>
+												</tr>
+												<tr>
+													<td>Preparing printer and printing prototype</td>
+													<td>2</td>
+												</tr>
+												<tr>
+													<td>Preparing printer and printing</td>
+													<td>2</td>
+												</tr>
+                                                <tr>
+													<td>Afterwork</td>
+													<td>5</td>
+												</tr>
+                                                <tr>
+													<td>3D scanning</td>
+													<td>1</td>
+												</tr>
+                                                <tr>
+													<td>Documentation</td>
+													<td>5</td>
+												</tr>
+                                                <tr>
+                                                    <td><b>Total workload</b></td>
+													<td><b>23 hours</b></td>
+                                                </tr>
+                                             </tbody>
+								        </table>
+									</div>
+                            <hr/>
+                            <h2>Finding inspiration</h2>
+                            <p>Finding inspiration, just like in project number 2, consisted of taking a look at life and finding something that could be made easier or better in any way. That way the item made would be useful. </p>
+                            <p>After a while I came to the conclusion to make a splint for hypermobile fingers, as that is a problem I have and really does affect daily life. Common splints are made of silver and are very expensive, as they are custom made, and the material is not affordable. This became the inspiration for the 3D printed finger splint. </p>
+                            <p>Search words used for information gathering: <i>html setup, diy finger-splint, 3D-printed brace for finger, plastic finger-splint</i>.</p>
+                            <hr/>
+                            <h2>Designing the splint</h2>
+                            <p>Below there are photos of a silver splint as well as <a href="https://www.thingiverse.com/thing:2854597/files" >a 3D printed splint found online.</a> The design was not available to download and edit, it was only available on *.stl form in different ring sizes.  
+                            <div class="box alt">
+								<div class="row gtr-uniform">
+                                    <div class="col-4"><span class="image fit"><img src="images/splint_silver.jpg" alt="" /></span></div>
+                                    <div class="col-3"><span class="image fit"><img src="images/splint_green.png" alt="" /></span></div>
+                                </div>
+                            </div>
+                            <p>As the photos show a finger-splint for hyperextension will support the front of the finger at the middle ligament and the back of the finger on either side of the ligament. To determine the size a finger was measured with a thread and a ruler above and below the ligament, and later on the circumference of the splint matched to that.</p>
+
+                            <h2>Planning the execution</h2>
+                            <p>The first step of the execution of the project was adding parameters. A video suggested by the course teacher that can be seen below was used as a guide. </p>
+                            <ul class="actions fit small">
+                                <li><a href="https://www.youtube.com/watch?v=9U2JPfkQpsE" class="button primary fit" target="_blank">Adding parameters: Fusion 360</a></li></ul>
+                            <p>The parameter in this project that is most important is the circumference of the "hole" that forms the base. Below all of the parameters can be seen.</p>
+                            <span class="image"><img src="images/splint_param.png" alt="" /></span>
+                            <p>The group part of the project is important not note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a herf="https://ado15.github.io/Heimasida/project3H.html">this page.</a></p>
+                            <h2>Drawing</h2>
+                            <p>The first few steps in the drawing the design were drawing a simple circle with the desired circumference and thickness of the splint.</p>
+                            <img src="images/splint_circ.png" alt="" width="350" height="300">
+                            <p>Next the outer circle is extruded to hte desired length, in this case 22mm, as seen below. </p>
+                            <img src="images/splint_extrude.png" alt="" width="320" height="350">
+                            <p>Following the inner circle is also extruded to hollow out the shape. </p>
+                            <img src="images/splint_extrude2.png" alt="" width="320" height="350">
+                            <p>After that a sketch of the cut-outs is made. To ensure that the splint is comfortable the width of the bands is set to 3,25mm and the cut-outs are then made to meet in a radius of around 2mm. The rest is made to match the previously mentioned 3D design approximately in looks.</p>
+                            <img src="images/splint_cutout.png" alt="" width="400" height="350">
+                            <p>After the shape of the cut-outs is finished the sketch is extruded to cut it out. These last to steps were done a few times before the intended shape was aquired.</p>
+                            <img src="images/splint_shape.png" alt="" width="300" height="300">
+                            <br>
+                            <p>Finally the edges had to be shaped, as sharp edges would understandably not be comfortable. A fillet is made on all edges aas seen in the picture below.</p>
+                            <img src="images/splint_fillet.png" alt="" width="300" height="300">
+                            <p>The finished design was then saved as an *.stl file and the outcome can be seen below. </p>
+                            <img src="images/splint_stlmodel.png" alt="" width="300" height="350">
+                            <h2>Preparing and 3D printing prototype</h2>
+                            <p>After being saved as an *.stl file the design was moved over to the computer connected to the 3D printer, Ultimaker 3 extended, is connected to. Here, in consultation with Hafliði the course teacher, it is decided to first make a prototype with faster printing, with layer height at 0,2mm, to see if the size is accurate. The settings for that can be seen below. </p>
+                            <img src="images/splint_protosett.jpg" alt="" width="300" height="350">
+                            <p>According to the sample made in the group-part of this project support is added at 60% overhang. 
+                            <img src="images/splint_overhang.png" alt="" width="300" height="350">
+                            <br></p>
+                            <p>The support chosen is Zig Zag and the blueprint of the splint is shown below.</p>
+                            <img src="images/splint_blueprint.png" alt="" width="300" height="300">
+                            <p>Printing in action can be seen here:</p>
+                            <img src="images/splint_print.png" alt="" width="500" height="350">
+                            <p>The size came out great so the settings were updated to layer height 0,06mm for smoother printing, the support changed to lines to minimize the afterwork and the printer started. Unfortunately changing the support type did not go well and the item started moving with the printer-head. This resulted in having to restart the process, as the splint was not useable. </p>
+                            <img src="images/splint_nouse.png" alt="" width="500" height="350">
+                            <p>Now the support is changed back to zig zag and the printer started for the third time. This time it went great and the splint looked good. </p>
+                            <img src="images/splint_good.png" alt="" width="550" height="350">
+                            <p>Now the afterwork of taking out the support with a tong and a knife had to be done. After that the splint was sanded for even smoother surface. Below it can be seen on a finger.</p> 
+                            <img src="images/splint_on.png" alt="" width="500" height="350">
+                            The outcome was great and the splint really is usable and does help, for example when pushing buttons and doing dishes it saves a lot of pain! Both the prototype and the final edition can be used, even though one is better looking.
+                            <hr/>
+                            <h2>3D scanning</h2>
+                            <p>An app called Qlone is used for the purpose of scanning a 3D object with an iPhone. </p>
+                            <img src="images/scan_qlone.png" alt="" width="400" height="250">
+                            <p>The item to be scanned is </p>
+                            <img src="images/laser_start.jpg" alt="" width="350" height="300">
+                            <hr/>
+                            
 						</div>
 					</section>
-			</div>
 
+			</div>
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
