--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<h2>Project 3</h2>
 									<p>Description of the third project of the semester.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button disabled">Coming soon</a></li>
+										<li><a href="generic.html" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
