--- a/project3.html
+++ b/project3.html
@@ -114,7 +114,7 @@
                                 <li><a href="https://www.youtube.com/watch?v=9U2JPfkQpsE" class="button primary fit" target="_blank">Adding parameters: Fusion 360</a></li></ul>
                             <p>The parameter in this project that is most important is the circumference of the "hole" that forms the base. Below all of the parameters can be seen.</p>
                             <span class="image"><img src="images/splint_param.png" alt="" /></span>
-                            <p>The group part of the project is important not note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a herf="https://ado15.github.io/Heimasida/project3H.html">this page.</a></p>
+                            <p>The group part of the project is important to note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a herf="https://ado15.github.io/Heimasida/project3H.html">this page.</a></p>
                             <h2>Drawing</h2>
                             <p>The first few steps in the drawing the design were drawing a simple circle with the desired circumference and thickness of the splint.</p>
                             <img src="images/splint_circ.png" alt="" width="350" height="300">
@@ -124,10 +124,10 @@
                             <img src="images/splint_extrude2.png" alt="" width="320" height="350">
                             <p>After that a sketch of the cut-outs is made. To ensure that the splint is comfortable the width of the bands is set to 3,25mm and the cut-outs are then made to meet in a radius of around 2mm. The rest is made to match the previously mentioned 3D design approximately in looks.</p>
                             <img src="images/splint_cutout.png" alt="" width="400" height="350">
-                            <p>After the shape of the cut-outs is finished the sketch is extruded to cut it out. These last to steps were done a few times before the intended shape was aquired.</p>
+                            <p>After the shape of the cut-outs is finished the sketch is extruded to cut it out. These last two steps were done a few times before the intended shape was aquired.</p>
                             <img src="images/splint_shape.png" alt="" width="300" height="300">
                             <br>
-                            <p>Finally the edges had to be shaped, as sharp edges would understandably not be comfortable. A fillet is made on all edges aas seen in the picture below.</p>
+                            <p>Finally the edges had to be shaped, as sharp edges would understandably not be comfortable. A fillet is made on all edges as seen in the picture below.</p>
                             <img src="images/splint_fillet.png" alt="" width="300" height="300">
                             <p>The finished design was then saved as an *.stl file and the outcome can be seen below. </p>
                             <img src="images/splint_stlmodel.png" alt="" width="300" height="350">
@@ -147,13 +147,13 @@
                             <img src="images/splint_good.png" alt="" width="550" height="350">
                             <p>Now the afterwork of taking out the support with a tong and a knife had to be done. After that the splint was sanded for even smoother surface. Below it can be seen on a finger.</p> 
                             <img src="images/splint_on.png" alt="" width="500" height="350">
-                            The outcome was great and the splint really is usable and does help, for example when pushing buttons and doing dishes it saves a lot of pain! Both the prototype and the final edition can be used, even though one is better looking.
+                            <p>The outcome was great and the splint really is usable and does help, for example when pushing buttons and doing dishes it saves a lot of pain! Both the prototype and the final edition can be used, even though one is better looking.</p>
                             <hr/>
                             <h2>3D scanning</h2>
                             <p>An app called Qlone is used for the purpose of scanning a 3D object with an iPhone. </p>
                             <img src="images/scan_qlone.png" alt="" width="400" height="250">
-                            <p>The item to be scanned is </p>
-                            <img src="images/laser_start.jpg" alt="" width="350" height="300">
+                            <p>The item to be scanned preferably has to be matte.</p>
+                            
                             <hr/>
                             
 						</div>
