--- a/project3.html
+++ b/project3.html
@@ -41,7 +41,7 @@
 				<!-- Main -->
 										<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Laser-cut project</h1>
+							<h1 class="major">3D printing and scanning project</h1>
 							<p>The third individual project of the semester is to design and print an object in 3D that can not be made by cutting. Additionally, scanning any object in 3D is a part of the project. A small group project, finding the restrictions of the 3D printer used for the individual project is included in the design chapter. </p>
                             <h4>Table 1: Workload</h4>
 									<div class="table-wrapper">
@@ -62,7 +62,7 @@
 													<td>8</td>
 												</tr>
 												<tr>
-													<td>Execution of group project: Finding the kerf</td>
+													<td>Execution of group project part</td>
 													<td>2</td>
 												</tr>
 												<tr>
@@ -150,12 +150,15 @@
                             <p>The outcome was great and the splint really is usable and does help, for example when pushing buttons and doing dishes it saves a lot of pain! Both the prototype and the final edition can be used, even though one is better looking.</p>
                             <hr/>
                             <h2>3D scanning</h2>
-                            <p>An app called Qlone is used for the purpose of scanning a 3D object with an iPhone. </p>
+                            <p>An app called Qlone is used for the purpose of scanning a 3D object with an iPhone. The app guides the user through the process so it was a good choice for a first 3D scanning experiment. First a mat is printed and the item to be scanned placed in the middle. </p>
                             <img src="images/scan_qlone.png" alt="" width="400" height="250">
-                            <p>The item to be scanned preferably has to be matte.</p>
-                            
+                            <p>The item to be scanned preferably has to be matte. At my office I have a rubber duck. It was given to me as a joke for rubber duck debugging, which actually is quite useful and can be read about further <a href="https://medium.com/@katiebrouwers/why-rubber-ducking-is-one-of-your-greatest-resources-as-a-developer-99ac0ee5b70a" class="" target="_blank">here.</a></p>
+                            <img src="images/3dscanduck.jpg" alt="" width="300" height="350">
+                            <p>The first few scans did not go great as it seems to require a bit of practice. The item was scanned stranding up and laying on the side.</p>
+                            <img src="images/3dscan1.png" alt="" width="400" height="250">
+                            <p>After a few tries it turned out relatively good, a gif of the outcome can be seen below.</p>
+                            <img src="images/3dscan2.gif" alt="" width="400" height="250">
                             <hr/>
-                            
 						</div>
 					</section>
 
