--- a/project3.html
+++ b/project3.html
@@ -107,14 +107,14 @@
                                 </div>
                             </div>
                             <p>As the photos show a finger-splint for hyperextension will support the front of the finger at the middle ligament and the back of the finger on either side of the ligament. To determine the size a finger was measured with a thread and a ruler above and below the ligament, and later on the circumference of the splint matched to that.</p>
-
+                            <hr/>
                             <h2>Planning the execution</h2>
                             <p>The first step of the execution of the project was adding parameters. A video suggested by the course teacher that can be seen below was used as a guide. </p>
                             <ul class="actions fit small">
                                 <li><a href="https://www.youtube.com/watch?v=9U2JPfkQpsE" class="button primary fit" target="_blank">Adding parameters: Fusion 360</a></li></ul>
                             <p>The parameter in this project that is most important is the circumference of the "hole" that forms the base. Below all of the parameters can be seen.</p>
                             <span class="image"><img src="images/splint_param.png" alt="" /></span>
-                            <p>The group part of the project is important to note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a herf="https://ado15.github.io/Heimasida/project3H.html">this page.</a></p>
+                            <p>The group part of the project is important to note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a href="https://ado15.github.io/Heimasida/project3H.html">this page.</a></p>
                             <h2>Drawing</h2>
                             <p>The first few steps in the drawing the design were drawing a simple circle with the desired circumference and thickness of the splint.</p>
                             <img src="images/splint_circ.png" alt="" width="350" height="300">
