--- a/project3.html
+++ b/project3.html
@@ -134,9 +134,9 @@
                             <h2>Preparing and 3D printing prototype</h2>
                             <p>After being saved as an *.stl file the design was moved over to the computer connected to the 3D printer, Ultimaker 3 extended, is connected to. Here, in consultation with Hafliði the course teacher, it is decided to first make a prototype with faster printing, with layer height at 0,2mm, to see if the size is accurate. The settings for that can be seen below. </p>
                             <img src="images/splint_protosett.jpg" alt="" width="300" height="350">
-                            <p>According to the sample made in the group-part of this project support is added at 60% overhang. 
+                            <p>According to the sample made in the group-part of this project support is added at 60% overhang. </p>
                             <img src="images/splint_overhang.png" alt="" width="300" height="350">
-                            <br></p>
+                            <br>
                             <p>The support chosen is Zig Zag and the blueprint of the splint is shown below.</p>
                             <img src="images/splint_blueprint.png" alt="" width="300" height="300">
                             <p>Printing in action can be seen here:</p>
