--- a/project2.html
+++ b/project2.html
@@ -27,10 +27,13 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="project1.html" >Project 1</a></li>
-                        <li><a href="project2.html" class="active">Project 2</a></li>
-                        <li><a href="project3.html" >Project 3</a></li>
-                        <li><a href="cv.html" >CV</a></li>
+						<li><a href="project1.html" class="active">Project 1</a></li>
+                        <li><a href="project2.html">Project 2</a></li>
+                        <li><a href="project3.html">Project 3</a></li>
+                        <li><a href="project4">Project 4</a></li>
+                        <li><a href="project5">Project 5</a></li>
+                        <li><a href="project6">Project 6</a></li>
+                        <li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
 			</header>
