--- a/index.html
+++ b/index.html
@@ -88,6 +88,42 @@
 								</div>
 							</div>
 						</section>
+                        <section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Project 4</h2>
+									<p>Group project.</p>
+									<ul class="actions">
+										<li><a href="project4.html" class="button">Check it out</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+                        <section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Project 5</h2>
+									<p>Group project.</p>
+									<ul class="actions">
+										<li><a href="project5.html" class="button">Check it out</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+                        <section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Project 6</h2>
+									<p>Group project.</p>
+									<ul class="actions">
+										<li><a href="project6.html" class="button">Check it out</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
 				<!-- Two -->
