--- a/project3.html
+++ b/project3.html
@@ -110,6 +110,7 @@
                                 </div>
                             </div>
                             <p>As the photos show a finger-splint for hyperextension will support the front of the finger at the middle ligament and the back of the finger on either side of the ligament. To determine the size a finger was measured with a thread and a ruler above and below the ligament, and later on the circumference of the splint matched to that.</p>
+                            <p>The group part of the project is important to note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a href="https://ado15.github.io/Heimasida/project3H.html">this page.</a>. The sample shows at which point support is needed when 3D printing the item. As listed in the project support is needed at 60% overhang, and that will be kept in mind when printing.</p>
                             <hr/>
                             <h2>Planning the execution</h2>
                             <p>The first step of the execution of the project was adding parameters. A video suggested by the course teacher that can be seen below was used as a guide. </p>
@@ -117,7 +118,6 @@
                                 <li><a href="https://www.youtube.com/watch?v=9U2JPfkQpsE" class="button primary fit" target="_blank">Adding parameters: Fusion 360</a></li></ul>
                             <p>The parameter in this project that is most important is the circumference of the "hole" that forms the base. Below all of the parameters can be seen.</p>
                             <span class="image"><img src="images/splint_param.png" alt="" /></span>
-                            <p>The group part of the project is important to note, as it sets some restraints on designing for the 3D printer. How it was done and what it tells whoever uses it is listed in Icelandic on <a href="https://ado15.github.io/Heimasida/project3H.html">this page.</a></p>
                             <h2>Drawing</h2>
                             <p>The first few steps in the drawing the design were drawing a simple circle with the desired circumference and thickness of the splint.</p>
                             <img src="images/splint_circ.png" alt="" width="350" height="300">
@@ -151,6 +151,9 @@
                             <p>Now the afterwork of taking out the support with a tong and a knife had to be done. After that the splint was sanded for even smoother surface. Below it can be seen on a finger.</p> 
                             <img src="images/splint_on.png" alt="" width="500" height="350">
                             <p>The outcome was great and the splint really is usable and does help, for example when pushing buttons and doing dishes it saves a lot of pain! Both the prototype and the final edition can be used, even though one is better looking.</p>
+                            <p>If the button below is clicked you will be redirected to my github repository, where a file with the design can be found under the name fingurspelka.dxf.</p>
+                            <ul class="actions fit small">
+                                <li><a href="https://bjorgeva.github.io/website_project" class="button primary fit" target="_blank">Go to the website's repository</a></li></ul>
                             <hr/>
                             <h2>3D scanning</h2>
                             <p>An app called Qlone is used for the purpose of scanning a 3D object with an iPhone. The app guides the user through the process so it was a good choice for a first 3D scanning experiment. First a mat is printed and the item to be scanned placed in the middle. </p>
